plugins {
    id 'io.quarkus'
}

group = 'com.cancache'
version = '1.0.0-SNAPSHOT'

def quarkusJvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
]

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    implementation enforcedPlatform(
            "${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-vertx'
    implementation 'io.quarkus:quarkus-config-yaml'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-smallrye-health'
    implementation 'io.quarkus:quarkus-micrometer-registry-prometheus'

    testImplementation 'io.quarkus:quarkus-junit'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

quarkus {
    buildForkOptions {
        jvmArgs(quarkusJvmArgs)
    }
    codeGenForkOptions {
        jvmArgs(quarkusJvmArgs)
    }
}

tasks.withType(Test).configureEach {
    systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.LogManager'
    jvmArgs(quarkusJvmArgs)
}

tasks.named('quarkusDev') {
    jvmArguments.addAll(quarkusJvmArgs)
}

tasks.named('quarkusRun') {
    jvmArguments.addAll(quarkusJvmArgs)
}
